Setting up Karama

--- a/public/modules/style-guide/directives/molecules/style-guide.client.molecules.directive.view.html
+++ b/public/modules/style-guide/directives/molecules/style-guide.client.molecules.directive.view.html
@@ -3,13 +3,7 @@
 <h1>
 	Nav
 </h1>
-<div class="nav">
-	<md-button md-ink-ripple="#0066CC" class="md-accent blue">About</md-button>
-	<md-button md-ink-ripple="#F8C7A9" class="md-accent yellow">Resume</md-button>
-	<md-button md-ink-ripple="#C9F8A9" class="md-accent green">Work</md-button>
-	<md-button md-ink-ripple="#EEBBEE" class="md-accent pink">Experience</md-button>
-	<md-button md-ink-ripple="#0066CC" class="md-accent blue">Contact</md-button>
-</div>
+    <top-nav></top-nav>
 <hr />
 <h1>
 	Headers
@@ -26,4 +20,16 @@
 <h1>
 	Buttons
 </h1>
-
+<hr />
+<md-button class="md-icon-button" aria-label="Menu">
+    <md-icon md-font-icon="fa fa-bars"></md-icon>
+</md-button>
+<md-button class="md-icon-button" aria-label="Github">
+    <md-icon md-font-icon="fa fa-github"></md-icon>
+</md-button>
+<md-button class="md-icon-button" aria-label="Linked In">
+    <md-icon md-font-icon="fa fa-linkedin"></md-icon>
+</md-button>
+<md-button class="md-icon-button" aria-label="Facebook">
+    <md-icon md-font-icon="fa fa-facebook-f"></md-icon>
+</md-button>
